"system" view split into system and networks. Config files added to files directory

--- a/app/files/upmpdcli.conf
+++ b/app/files/upmpdcli.conf
@@ -84,15 +84,15 @@ loglevel = 2
 
 # <var name="tidaluser" type="string"><brief>Tidal user name.</brief>
 # <descr>Your Tidal login name.</descr></var>
-tidaluser = ritchie20@hotmail.com
+# tidaluser =
 # <var name="tidalpass" type="string"><brief>Tidal password.</brief>
 # <descr>The password for your Tidal account.</descr></var>
-tidalpass = blackmore22
+# tidalpass =
 # <var name="tidalquality" type="cstr" "values="low high lossless">
 # <brief>Tidal stream quality.</brief> <descr>'low' and 'high' are aac
 # streams. 'lossless' is FLAC and will only work if your subscription
 # allows it.</descr></var>
-tidalquality = lossless
+# tidalquality =
 
 # <grouptitle>Qobuz streaming service parameters</grouptitle>
 
